# arbor

./: .clang-tidy  .gitignore  .gitmodules  Arbor.sln  CMakeLists.txt  CMakePresets.json  README.md  bootstrap.ps1
applications/glade/: CMakeLists.txt
applications/glade/resources/: mainwindow.qrc
applications/glade/resources/styles/: dark-style.qss
applications/glade/src/: ActionController.cxx  ActionController.hpp  DisplayWidget.cxx  DisplayWidget.hpp  ImportModelDetails.hpp  MainWindow.cxx  MainWindow.hpp  MainWindow.ui  QtVulkanWidget.cxx  QtVulkanWidget.hpp  main.cxx
applications/glade/src/actions/: ActionManager.hpp
applications/glade/src/adapters/: AssetAdapter.cxx  AssetAdapter.hpp
applications/glade/src/commands/: ImportModelCommand.hpp
applications/glade/src/dialogs/: ModelDialog.cxx  ModelDialog.hpp  ModelDialog.ui
applications/glade/src/models/: AssetTreeModel.cxx  AssetTreeModel.hpp
applications/glade/src/panels/: AssetsPanel.cxx  AssetsPanel.hpp  LogPanel.cxx  LogPanel.hpp  LogPanel.ui
applications/glade/src/widget-frame/: WindowBar.cxx  WindowBar.hpp  WindowBarPrivate.hpp  WindowButton.cxx  WindowButton.hpp  WindowButtonPrivate.hpp
applications/testarea/: CMakeLists.txt
applications/testarea/src/: Log.cxx  Log.hpp  main.cxx
libraries/base-kit/: CMakeLists.txt
libraries/base-kit/include/bk/: ChronoDefs.hpp  EventQueue2.hpp  IEventQueue.hpp  Log.hpp  Logger.hpp  NativeWindowHandle.hpp  NonCopyMove.hpp  Preferences.hpp  Strings.hpp
libraries/base-kit/src/: Log.cxx  Logger.cxx  Preferences.cxx
libraries/engine/: CMakeLists.txt
libraries/engine/api/: CMakeLists.txt
libraries/engine/api/include/: GraphicsOptions.hpp  IGameplayContext.hpp  IGraphicsContext.hpp  TestEvents.hpp
libraries/engine/base/: CMakeLists.txt
libraries/engine/base/include/engine/base/: IEngineContext.hpp  ResizeEvent.hpp
libraries/engine/base/src/: EngineContext.cxx  EngineContext.hpp
libraries/engine/common/: CMakeLists.txt
libraries/engine/common/include/engine/common/: EngineEvents.hpp  EngineOptions.hpp  Handle.hpp  HandleGenerator.hpp  HandleMapper.hpp  IStateBuffer.hpp  RenderSettingsEvent.hpp  RenderSurfaceState.hpp  ResizeEvent.hpp  SimState.hpp  Size.hpp  StateBuffer.hpp  TripleBuffer.hpp
libraries/engine/common/include/engine/common/data/: Handle.hpp  Tags.hpp
libraries/engine/core/: CMakeLists.txt
libraries/engine/core/src/: EngineContext.cxx  EngineContext.hpp  EventQueue2.hpp  Placeholder.cxx
libraries/engine/gameplay/: CMakeLists.txt
libraries/engine/gameplay/include/gameplay/: IGameplayContext.hpp
libraries/engine/gameplay/src/: EntityManager.cxx  EntityManager.hpp  GameplayContext.cxx  GameplayContext.hpp
libraries/engine/graphics/: CMakeLists.txt
libraries/engine/graphics-vk/: CMakeLists.txt
libraries/engine/graphics-vk/src/: GraphicsContext.cxx  GraphicsContext.hpp
libraries/engine/graphics-vk/src/core/: CoreContext.cxx  CoreContext.hpp  Instance.hpp  PhysicalDevice.hpp  Surface.cxx
libraries/engine/graphics-vk/src/vk/: Device.cxx  Device.hpp  DeviceFeatures.hpp  DeviceOptions.hpp  ErrorUtils.hpp  Instance.cxx  Instance.hpp  PhysicalDevice.cxx  PhysicalDevice.hpp  QueueFamilyIndices.hpp  Surface.hpp
libraries/engine/graphics/base/: CMakeLists.txt
libraries/engine/graphics/base/include/graphics/base/: IGraphicsContext.hpp
libraries/engine/graphics/common/: CMakeLists.txt
libraries/engine/graphics/common/include/graphics/common/: GraphicsOptions.hpp
libraries/engine/graphics/vulkan/: CMakeLists.txt  Readme.md  diagram.excalidraw
libraries/engine/graphics/vulkan/assets/: CMakeLists.txt
libraries/engine/graphics/vulkan/assets/include/assets/: AssetContext.hpp
libraries/engine/graphics/vulkan/assets/src/: AssetContext.cxx
libraries/engine/graphics/vulkan/base/: CMakeLists.txt
libraries/engine/graphics/vulkan/base/src/: VulkanContext.cxx
libraries/engine/graphics/vulkan/common/: CMakeLists.txt
libraries/engine/graphics/vulkan/common/include/: DebugUtils.hpp  ImageView.hpp
libraries/engine/graphics/vulkan/common/include/common/: AccessMode.hpp  BufferCreateInfo.hpp  BufferRequirement.hpp  BufferUseDescription.hpp  DebugUtils.hpp  ErrorUtils.hpp  ExternalImageDescription.hpp  ExternalImageRequirement.hpp  Fence.hpp  HandleMapperTypes.hpp  Handles.hpp  ImageAcquireResult.hpp  ImageCreateDescription.hpp  ImageLifetime.hpp  ImageRequirement.hpp  ImageUseDescription.hpp  ImageView.hpp  Queues.hpp  ResizePolicy.hpp  Semaphore.hpp  SemaphorePack.hpp  Texture.hpp
libraries/engine/graphics/vulkan/core/: CMakeLists.txt
libraries/engine/graphics/vulkan/core/include/core/: AllocatorService.hpp  Buffer.hpp  CoreContext.hpp  Device.hpp  FrameState.hpp  Image.hpp  ImageView.hpp  Swapchain.hpp
libraries/engine/graphics/vulkan/core/src/: AllocatorService.cxx  Buffer.cxx  CommandBuffer.cxx  CommandBufferManager.cxx  CoreContext.cxx  Device.cxx  Device.hpp  DeviceFeatures.hpp  ErrorUtils.hpp  Image.cxx  ImageView.cxx  Instance.cxx  Instance.hpp  PhysicalDevice.cxx  PhysicalDevice.hpp  QueueFamilyIndices.hpp  Surface.cxx  Surface.hpp  Swapchain.cxx  Swapchain.hpp
libraries/engine/graphics/vulkan/core/src/command-buffer/: CommandBufferManager.cxx
libraries/engine/graphics/vulkan/core/src/pipeline/: IShaderModuleFactory.hpp  Pipeline.cxx  PipelineLayout.cxx  PipelineManager.cxx  ShaderModule.cxx  ShaderModule.hpp  (+2 more)
libraries/engine/graphics/vulkan/renderer/: CMakeLists.txt
libraries/engine/graphics/vulkan/renderer/src/: Frame.cxx  Frame.hpp  FrameData.hpp  FrameManager.cxx  FrameManager.hpp  FrameRenderer.cxx  FrameRenderer.hpp  GlobalBufferManager.cxx  GlobalBufferManager.hpp  IResizable.hpp  ImageTransitionQueue.cxx  ImageTransitionQueue.hpp  PerFrameUploader.cxx  PerFrameUploader.hpp  RenderContext.cxx  ResourceAliases.hpp
libraries/engine/graphics/vulkan/resources/: CMakeLists.txt
libraries/engine/graphics/vulkan/resources/src/: Buffer.hpp  BufferManager.cxx  BufferManager.hpp  ResourceContext.cxx  ResourceFacade.cxx  ResourceSystem.cxx
libraries/engine/public/: IEngineContext.hpp  IEventQueue.hpp
(+217 files in other folders)
